force-app/main/default/objects/Invoice__c/fields/InvoicePOSTotalTimeExpense__c.field-meta.xml
<CustomField>
    <fullName>InvoicePOSTotalTimeExpense__c</fullName>
    <formula>InvoicePOSTotalTime__c+InvoicePOSTotalExpense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice POS - Total Time &amp; Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>