force-app/main/default/objects/Invoice__c/fields/InvoiceReceiver__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReceiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Receiver</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Billing Receiver)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>