force-app/main/default/objects/Invoice__c/fields/InvoiceSentDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSentDate__c</fullName>
    <label>Invoice Print Date</label>
    <type>Date</type>
</CustomField>