force-app/main/default/objects/Invoice__c/fields/InvoiceTotalAmountGross__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalAmountGross__c</fullName>
    <formula>InvoiceTotalAmountNet__c + InvoiceVATAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Total Amount Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>