force-app/main/default/objects/Invoice__c/fields/InvoiceTotalAmountGrossCHF__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalAmountGrossCHF__c</fullName>
    <description>31.01.2017, ary: Dieses Feld braucht es an sich nicht</description>
    <formula>(InvoiceTotalAmountNetCHF__c + InvoiceVATAmountCHF__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Total Amount Gross (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>