force-app/main/default/objects/Invoice__c/fields/InvoiceTotalAmountGrossSGP__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalAmountGrossSGP__c</fullName>
    <formula>(InvoiceTotalAmountNetSGP__c + InvoiceVATAmountSGP__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Total Amount Gross (SGP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>