force-app/main/default/objects/Invoice__c/fields/InvoiceTotalAmountNet__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalAmountNet__c</fullName>
    <formula>InvoicePOSTotalTime__c + InvoicePOSTotalExpense__c + InvoicePOSTotalSupplierCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Total Amount Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>