force-app/main/default/objects/Invoice__c/fields/InvoiceTotalAmountNetGBP__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalAmountNetGBP__c</fullName>
    <formula>(InvoicePOSTotalTimeSGP__c + InvoicePOSTotalExpenseSGP__c + InvoicePOSTotalSupplierCostSGP__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Total Amount Net (GBP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>