force-app/main/default/objects/Invoice__c/fields/InvoiceTotalAmountNetSGP__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalAmountNetSGP__c</fullName>
    <formula>(InvoicePOSTotalTimeSGP__c + InvoicePOSTotalExpenseSGP__c +  InvoicePOSTotalSupplierCostSGP__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Total Amount Net (SGP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>