force-app/main/default/objects/Invoice__c/fields/InvoiceTotalAmountOpen__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalAmountOpen__c</fullName>
    <description>Dieses Feld wird über eine manuelle Schnittstelle aus Abacus befüllt.</description>
    <label>Invoice - Total Amount Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>