force-app/main/default/objects/Invoice__c/fields/InvoiceType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceType__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Type</label>
    <type>Text</type>
</CustomField>