force-app/main/default/objects/Invoice__c/fields/InvoiceValutaDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceValutaDate__c</fullName>
    <description>Dieses Feld wird über eine manuelle Schnittstelle aus Abacus befüllt.</description>
    <label>Invoice Last Payment Date</label>
    <type>Date</type>
</CustomField>