force-app/main/default/objects/Invoice__c/fields/InvoiceVATAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>InvoiceVATAmountCHF__c</fullName>
    <label>Invoice - VAT Amount (CHF)</label>
    <summarizedField>InvoicePos__c.InvoicePositionVATAmountCHF__c</summarizedField>
    <summaryFilterItems>
        <field>InvoicePos__c.PackageType__c</field>
        <operation>notEqual</operation>
        <value>Group</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoicePos__c.InvoiceName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>