force-app/main/default/objects/Invoice__c/fields/InvoiceVATAmountSGP__c.field-meta.xml
<CustomField>
    <fullName>InvoiceVATAmountSGP__c</fullName>
    <label>Invoice - VAT Amount (SGP)</label>
    <summarizedField>InvoicePos__c.InvoicePositionVATAmountSGP__c</summarizedField>
    <summaryFilterItems>
        <field>InvoicePos__c.PackageType__c</field>
        <operation>notEqual</operation>
        <value>Group</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoicePos__c.InvoiceName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>