force-app/main/default/objects/Invoice__c/fields/LastReminderDate__c.field-meta.xml
<CustomField>
    <fullName>LastReminderDate__c</fullName>
    <label>Last Reminder Date</label>
    <type>Date</type>
</CustomField>