force-app/main/default/objects/Invoice__c/fields/PeriodFrom__c.field-meta.xml
<CustomField>
    <fullName>PeriodFrom__c</fullName>
    <label>Period (From)</label>
    <type>Date</type>
</CustomField>