force-app/main/default/objects/Invoice__c/fields/PeriodUntil__c.field-meta.xml
<CustomField>
    <fullName>PeriodUntil__c</fullName>
    <label>Period (Until)</label>
    <type>Date</type>
</CustomField>