force-app/main/default/objects/Invoice__c/fields/PrintInvoiceDocumentNr__c.field-meta.xml
<CustomField>
    <fullName>PrintInvoiceDocumentNr__c</fullName>
    <description>Dieses Feld wird für die Dateinamenverwendung durch Dynadoc verwendet.</description>
    <formula>TEXT( InvoiceDocumentNr__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Invoice Document Nr.</label>
    <type>Text</type>
</CustomField>