force-app/main/default/objects/Invoice__c/fields/PrintTotal1__c.field-meta.xml
<CustomField>
    <fullName>PrintTotal1__c</fullName>
    <formula>InvoicePOSTotalTime__c + InvoicePOSTotalSCSectionFalse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrintTotal1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>