force-app/main/default/objects/Invoice__c/fields/PrintTotal2__c.field-meta.xml
<CustomField>
    <fullName>PrintTotal2__c</fullName>
    <formula>PrintTotal1__c + InvoicePOSTotalExpense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrintTotal2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>