force-app/main/default/objects/Invoice__c/fields/ProjectCostCenter__c.field-meta.xml
<CustomField>
    <fullName>ProjectCostCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Cost Center</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>