force-app/main/default/objects/Invoice__c/fields/ProjectInvoiceCurrency__c.field-meta.xml
<CustomField>
    <fullName>ProjectInvoiceCurrency__c</fullName>
    <label>Project / Invoice Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>