force-app/main/default/objects/Invoice__c/fields/ProjectInvoiceDescription__c.field-meta.xml
<CustomField>
    <fullName>ProjectInvoiceDescription__c</fullName>
    <description>08.03.2017, ary: Dieses Feld ist redundant und wird nicht mehr benötigt.</description>
    <label>Project Invoice Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>