force-app/main/default/objects/Invoice__c/fields/QR_Invoice__c.field-meta.xml
<CustomField>
    <fullName>QR_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QR Invoice</label>
    <type>Checkbox</type>
</CustomField>