force-app/main/default/objects/Invoice__c/fields/QRBillImage__c.field-meta.xml
<CustomField>
    <fullName>QRBillImage__c</fullName>
    <label>QR Bill Image</label>
    <type>Url</type>
</CustomField>