force-app/main/default/objects/Invoice__c/fields/QRBillResult__c.field-meta.xml
<CustomField>
    <fullName>QRBillResult__c</fullName>
    <label>QR Bill Generation Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>