force-app/main/default/objects/Invoice__c/fields/QRBillResultStatusCode__c.field-meta.xml
<CustomField>
    <fullName>QRBillResultStatusCode__c</fullName>
    <label>QR Bill Result Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>