force-app/main/default/objects/Invoice__c/fields/ReminderLevel__c.field-meta.xml
<CustomField>
    <fullName>ReminderLevel__c</fullName>
    <label>Reminder Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>