force-app/main/default/objects/Invoice__c/fields/ShowProjectInvoiceDescription__c.field-meta.xml
<CustomField>
    <fullName>ShowProjectInvoiceDescription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>08.03.2017, ary: Steuert die Anzeige der Invoice Description auf dem Template</description>
    <label>Show Invoice Description</label>
    <type>Checkbox</type>
</CustomField>