force-app/main/default/objects/Invoice__c/fields/SWIFT__c.field-meta.xml
<CustomField>
    <fullName>SWIFT__c</fullName>
    <formula>IF(
 ProjectInvoiceCurrency__c =&quot;CHF&quot;, ProjectCostCenter__r.CHFSWIFT__c ,
IF( 
ProjectInvoiceCurrency__c =&quot;EUR&quot;, ProjectCostCenter__r.EURSWIFT__c ,
IF(
 ProjectInvoiceCurrency__c =&quot;USD&quot;, ProjectCostCenter__r.USDSWIFT__c ,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SWIFT</label>
    <type>Text</type>
</CustomField>