force-app/main/default/objects/Invoice__c/fields/TaxNumberRef__c.field-meta.xml
<CustomField>
    <fullName>TaxNumberRef__c</fullName>
    <formula>BillingViaCompany__r.TaxNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Number</label>
    <type>Text</type>
</CustomField>