force-app/main/default/objects/Invoice__c/fields/TermsOfPayment__c.field-meta.xml
<CustomField>
    <fullName>TermsOfPayment__c</fullName>
    <description>16.12.2016, ary: Neues Feld gemacht als Pickliste. Dieses Feld muss aus dem Apex raus, damit es gelöscht werden kann.</description>
    <label>Terms of Payment_do_not_use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>