force-app/main/default/objects/Invoice__c/fields/TotalInvoiceInclCancellationCHF__c.field-meta.xml
<CustomField>
    <fullName>TotalInvoiceInclCancellationCHF__c</fullName>
    <formula>IF(
 RecordType.DeveloperName =&quot;Invoice&quot;,
InvoicePOSTotalTimeCHF__c+InvoicePOSTotalExpenseCHF__c+InvoicePOSTotalSupplierCostCHF__c,

IF(
 RecordType.DeveloperName =&quot;Cancellation&quot;,

(CancellationInvoiceRelation__r.InvoicePOSTotalTimeCHF__c+ CancellationInvoiceRelation__r.InvoicePOSTotalExpenseCHF__c+ CancellationInvoiceRelation__r.InvoicePOSTotalSupplierCostCHF__c)*-1,

IF(
 RecordType.DeveloperName =&quot;Credit&quot;,
(InvoicePOSTotalTimeCHF__c+InvoicePOSTotalExpenseCHF__c+InvoicePOSTotalSupplierCostCHF__c)*-1,

IF(
 RecordType.DeveloperName =&quot;ILV&quot;,
ILVPOSTotalTimeCHF__c*-1,
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice incl. Cancellation (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>