force-app/main/default/objects/Invoice__c/fields/ValAccountDebtorTrue__c.field-meta.xml
<CustomField>
    <fullName>ValAccountDebtorTrue__c</fullName>
    <description>Dieses Flag löst einen Meta Daten Parent Update aus
        (https://brandleadership.my.salesforce.com/m00b0000000fxzO) und setzt auf dem Invoice
        Receiver = Acocunt das Flag Debtor auf true. Dies wiederum löst den Prozess aus, auf dem
        Abacus interface einen Task für Talend zu erstellen.</description>
    <formula>AND(
        NOT(ISBLANK( InvoiceReceiver__c )),
        OR(
        ISPICKVAL( InvoiceStatus__c ,&quot;Ready&quot;),
        ISPICKVAL( InvoiceStatus__c ,&quot;Sent&quot;)
        )
        )</formula>
    <label>ValAccountDebtorTrue</label>
    <type>Checkbox</type>
</CustomField>