force-app/main/default/objects/Invoice__c/fields/ValCheckValidInvoice__c.field-meta.xml
<CustomField>
    <fullName>ValCheckValidInvoice__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCheckValidInvoice</label>
    <type>Checkbox</type>
</CustomField>