force-app/main/default/objects/Invoice__c/fields/ValHasAttachment__c.field-meta.xml
<CustomField>
    <fullName>ValHasAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValHasAttachment</label>
    <type>Checkbox</type>
</CustomField>