force-app/main/default/objects/Invoice__c/fields/ValNoDelete__c.field-meta.xml
<CustomField>
    <fullName>ValNoDelete__c</fullName>
    <formula>if(
AND(
ValNoDeleteOverrideSysadmin__c =false,
NOT(ISPICKVAL(InvoiceStatus__c ,&quot;Draft&quot;)),
NOT(ISBLANK(InvoiceDocumentNr__c))

)
, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValNoDelete</label>
    <type>Checkbox</type>
</CustomField>