force-app/main/default/objects/Invoice__c/fields/ValNoDeleteOverrideSysadmin__c.field-meta.xml
<CustomField>
    <fullName>ValNoDeleteOverrideSysadmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValNoDeleteOverrideSysAdmin</label>
    <type>Checkbox</type>
</CustomField>