force-app/main/default/objects/Invoice__c/fields/VATNumberRef__c.field-meta.xml
<CustomField>
    <fullName>VATNumberRef__c</fullName>
    <formula>BillingViaCompany__r.VatNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Number</label>
    <type>Text</type>
</CustomField>