force-app/main/default/objects/Invoice__c/fields/VATPercent__c.field-meta.xml
<CustomField>
    <fullName>VATPercent__c</fullName>
    <label>VAT %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>2.5%</fullName>
            </value>
            <value>
                <fullName>2.6%</fullName>
            </value>
            <value>
                <fullName>7.7%</fullName>
            </value>
            <value>
                <fullName>8%</fullName>
            </value>
            <value>
                <fullName>8.1%</fullName>
            </value>
            <value>
                <fullName>9%</fullName>
            </value>
            <value>
                <fullName>19%</fullName>
            </value>
            <value>
                <fullName>3.7%</fullName>
                <isActive>false</isActive>
                <label>3.7%</label>
            </value>
            <value>
                <fullName>3.8%</fullName>
                <isActive>false</isActive>
                <label>3.8%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>