force-app/main/default/objects/Invoice__c/fields/ZImportTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>ZImportTimeStamp__c</fullName>
    <label>ZImportTimeStamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>