force-app/main/default/objects/Invoice__c/recordTypes/Credit.recordType-meta.xml
<RecordType>
    <fullName>Credit</fullName>
    <active>false</active>
    <description>15.12.2017, ary: Entscheid Finance, Gutschriften werden als -Minus Rechnungen ins Abacus übertragen.</description>
    <label>Credit</label>
</RecordType>