force-app/main/default/objects/Invoice__c/recordTypes/ILV.recordType-meta.xml
<RecordType>
    <fullName>ILV</fullName>
    <active>true</active>
    <label>ILV</label>
</RecordType>