force-app/main/default/objects/Invoice__c/validationRules/IN004_Change_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>IN004_Change_Project</fullName>
    <active>true</active>
    <description>The Invoice can not be related to another project.</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
ISCHANGED( ProjectName__c ))</errorConditionFormula>
    <errorMessage>You can not attach the invoice to a different project. Please get in touch with your Super User for assistance.
(IN004)</errorMessage>
</ValidationRule>