force-app/main/default/objects/Invoice__c/validationRules/IN007_Change_Invoice_Status_Sent.validationRule-meta.xml
<ValidationRule>
    <fullName>IN007_Change_Invoice_Status_Sent</fullName>
    <active>true</active>
    <description
  >The invoice Status &quot;Sent&quot; can not be set because Abacus Transfer is not selected. Guarded to the transition into Sent (or insert as Sent) so already-Sent invoices, e.g. from the Abacus NG path, can still be edited and cancelled.</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
ISPICKVAL(InvoiceStatus__c ,&quot;Sent&quot;),
OR(ISNEW(), NOT(ISPICKVAL(PRIORVALUE(InvoiceStatus__c), &quot;Sent&quot;))),
RecordType.DeveloperName &lt;&gt; &quot;ILV&quot;,
OR(
ISBLANK( AbacusTransfer__c ),
AbacusInterfaceExport__c = false
)
)</errorConditionFormula>
    <errorMessage
  >The invoice Status &quot;Sent&quot; can not be set because Abacus Transfer / Abacus Interface Export ist not correct.
(IN007)</errorMessage>
</ValidationRule>