force-app/main/default/objects/Invoice__c/validationRules/IN008_Invoice_Status_No_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>IN008_Invoice_Status_No_Value</fullName>
    <active>true</active>
    <description>The Invoice Status can not be empty</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

ISBLANK(TEXT(InvoiceStatus__c)))</errorConditionFormula>
    <errorDisplayField>InvoiceStatus__c</errorDisplayField>
    <errorMessage>You have to select an Invoice Status.
(IN008)</errorMessage>
</ValidationRule>