force-app/main/default/objects/Invoice__c/validationRules/IN009_Change_Status_Sent.validationRule-meta.xml
<ValidationRule>
    <fullName>IN009_Change_Status_Sent</fullName>
    <active>true</active>
    <description>The invoice Status &quot;Sent&quot; can not be changed from sent.</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

ISPICKVAL(InvoiceStatus__c ,&quot;Ready&quot;),
 PRIORVALUE(InvoiceStatus__c) =&quot;Sent&quot;
)</errorConditionFormula>
    <errorMessage>You can not change the status of the invoice anymore since it has been sent. Please get in touch with Finance.
(IN009)</errorMessage>
</ValidationRule>