force-app/main/default/objects/Invoice__c/validationRules/IN017_Finance_Date_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>IN017_Finance_Date_Not_Allowed</fullName>
    <active>true</active>
    <description>The Finance Date is not allowed by Finance.</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
$User.IsFinanceManager__c = false,
FinanceDate__c &lt; ProjectCostCenter__r.FinanceDateLimit__c,
OR(
ISPICKVAL(InvoiceStatus__c,&quot;Draft&quot;),
ISPICKVAL(InvoiceStatus__c,&quot;Approval&quot;),
ISPICKVAL(InvoiceStatus__c,&quot;Ready&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>FinanceDate__c</errorDisplayField>
    <errorMessage>This finance date is not allowed. Please get in touch with Finance.
(IN017)</errorMessage>
</ValidationRule>