force-app/main/default/objects/Invoice__c/validationRules/IN018_Account_Data_Not_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>IN018_Account_Data_Not_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
NOT(ISPICKVAL(InvoiceStatus__c,&quot;Draft&quot; )),
OR(
ISBLANK(TEXT(VATPercent__c )),
ISBLANK(TEXT(TermsOfPayment2__c )),
ISBLANK(TEXT( InvoiceReceiver__r.AccountLanguage__c ))
)
)</errorConditionFormula>
    <errorMessage>Account Data is missing. Please check for Account Language, VAT %, Terms of Payment etc. 
(IN018)</errorMessage>
</ValidationRule>